--- a/index.html
+++ b/index.html
@@ -26,34 +26,34 @@ html{
 .a1{
     position: fixed;
     top: 10px;
-    right: 340px;
+    right: 250px;
     border: solid 1px;
     background: #3212a752;
 }
 .a2{
-    position: fixed;
-    right: 265px;
-    top: 10px;
-    border: solid 1px;
-    background: #3212a752;
-}
-.a3{
     position: fixed;
     right: 185px;
     top: 10px;
     border: solid 1px;
     background: #3212a752;
 }
+.a3{
+    position: fixed;
+    right: 130px;
+    top: 10px;
+    border: solid 1px;
+    background: #3212a752;
+}
 .a4{
     position: fixed;
-    right: 110px;
+    right: 75px;
     top: 10px;
     border: solid 1px;
     background: #3212a752;
 }
 .a5{
     position: fixed;
-    right: 10px;
+    right: 5px;
     top: 10px;
     border: solid 1px;
     background: #3212a752;
@@ -148,19 +148,34 @@ a{
     flex-direction: column;
     background-color:grey;
 }
-.gallery{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    box-sizing: border-box;
-}
 .gallery img{
-    width: 200px;
-    height: 200px;
+    position: relative;
+    width: 100px;
+    height: 100px;
     margin: 10px;
     border-radius: 30px;
+    left: 30px;
 }
-
+.j1{
+    position: relative;
+    top: -70px;
+    left: 150px;
+   }
+.j2{
+    position: relative;
+    top: -70px;
+    left: 150px;
+   }
+   .j3{
+    position: relative;
+    top: -70px;
+    left: 150px;
+   }
+   .j4{
+    position: relative;
+    top: -70px;
+    left: 150px;
+   }
 /* Skills Section */
 #services{
     display: flex;
@@ -175,7 +190,7 @@ a{
 }
 .htmlA1 img, .cssA1 img, .jsA1 img, .phpA1 img, .mysqlA1 img, .pyA1 img{
     position: relative;
-    left: 10%;
+    left: 50px;
     display: flex;
     flex-direction: column;
     height: 70px;   
@@ -194,7 +209,7 @@ a{
 .hp{
     position: relative;
     top: -50px;
-    left: 25%;
+    left: 130px;
     height: 20px;
     width: 50%;
     background: #eb2222;
@@ -203,7 +218,7 @@ a{
 }
 .cp{
     position: relative;
-    left: 25%;
+    left: 130px;
     top: -60px;
     height: 20px;
     width: 60%;
@@ -213,7 +228,7 @@ a{
 }
 .jp{
     position: relative;
-    left: 25%;
+    left: 130px;
     top: -60px;
     height: 20px;
     width: 40%;
@@ -223,7 +238,7 @@ a{
 }
 .pp{
     position: relative;
-    left: 25%;
+    left: 130px;
     top: -50px;
     height: 20px;
     width: 40%;
@@ -233,7 +248,7 @@ a{
 }
 .mp{
     position: relative;
-    left: 25%;
+    left: 130px;
     top: -50px;
     height: 20px;
     width: 35%;
@@ -243,7 +258,7 @@ a{
 }
 .pyp{
     position: relative;
-    left: 25%;
+    left: 130px;
     top: -50px;
     height: 20px;
     width: 45%;
@@ -300,11 +315,11 @@ a{
 <body>
     <nav class="navbar">
         
-            <a class="a1" href="#home"><h4>HOME</h4></a>
-            <a class="a2" href="#about"><h4>ABOUT</h4></a>
-            <a class="a3" href="#myjob"><h4>MY JOB</h4></a>
-            <a class="a4" href="#skills"><h4>SKILLS</h4></a>
-            <a class="a5" href="#contact"><h4>CONTACT</h4></a>
+            <a class="a1" href="#home"><h5>HOME</h5></a>
+            <a class="a2" href="#about"><h5>ABOUT</h5></a>
+            <a class="a3" href="#myjob"><h5>MY JOB</h5></a>
+            <a class="a4" href="#skills"><h5>SKILLS</h5></a>
+            <a class="a5" href="#contact"><h5>CONTACT</h5></a>
         
     </nav>
 
