--- a/index.html
+++ b/index.html
@@ -148,6 +148,12 @@ a{
     flex-direction: column;
     background-color:grey;
 }
+.gallery{
+    display: list-item;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    box-sizing: border-box;
+}
 .gallery img{
     position: relative;
     width: 100px;
@@ -316,7 +322,7 @@ a{
     <nav class="navbar">
         
             <a class="a1" href="#home"><h5>HOME</h5></a>
-            <a class="a2" href="#about"><h5>ABOUT</h5></a>
+            <a class="a2" href="#about"><h5>ABOUT</h5</a>
             <a class="a3" href="#myjob"><h5>MY JOB</h5></a>
             <a class="a4" href="#skills"><h5>SKILLS</h5></a>
             <a class="a5" href="#contact"><h5>CONTACT</h5></a>
@@ -351,13 +357,13 @@ a{
         <h1 class="headings">MY JOB</h1>
         <div class="gallery">
             <img src="onlinesale.png" alt="">
-            <b>Online Seller</b>
+            <div class="j1"><b>Online Seller</b></div>
             <img src="wedev.png" alt="">
-            <b>Freelancer Web Developer</b>
+            <div class="j2"><b>Freelancer <br>Web Developer</b></div>
             <img src="editor.png" alt="">
-            <b>Video Editor</b>
+            <div class="j3"><b>Video Editor</b></div>
             <img src="graphicd.png" alt="">
-            <b>Graphic Designer</b>
+            <div class="j4"><b>Graphic Designer</b></div>
 
         
         </div>
