--- a/index.html
+++ b/index.html
@@ -26,34 +26,34 @@ html{
 .a1{
     position: fixed;
     top: 10px;
-    right: 250px;
+    left: 10px;
     border: solid 1px;
     background: #3212a752;
 }
 .a2{
     position: fixed;
-    right: 185px;
+    left: 75px;
     top: 10px;
     border: solid 1px;
     background: #3212a752;
 }
 .a3{
     position: fixed;
-    right: 130px;
+    left: 140px;
     top: 10px;
     border: solid 1px;
     background: #3212a752;
 }
 .a4{
     position: fixed;
-    right: 75px;
+    left: 200px;
     top: 10px;
     border: solid 1px;
     background: #3212a752;
 }
 .a5{
     position: fixed;
-    right: 5px;
+    left: 260px;
     top: 10px;
     border: solid 1px;
     background: #3212a752;
